// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Кнопка должна содержать текст "Button"" 1`] = `
<button
  className="btn"
>
  <img
    alt=""
    src="test-file-stub"
  />
  <span
    style={
      Object {
        "fontStyle": "italic",
      }
    }
  >
    Button
  </span>
</button>
`;

exports[`Кнопка должна содержать текст по-умолчанию 1`] = `
<button
  className="btn"
>
  <img
    alt=""
    src="test-file-stub"
  />
  <span
    style={
      Object {
        "fontStyle": "italic",
      }
    }
  >
    Simple button
  </span>
</button>
`;
